# site-generator

./: .gitignore  README.md  pyproject.toml
.github/actions/deploy-site/: action.yml
.github/workflows/: deploy.yml
scripts/: create-repos.ps1  local-preview.ps1  sync_rst_catalog.py
sites/charity/: beliefs.md  beliefs.yaml  index.md  living-faith.md  living-faith.yaml  meta.yaml  tracker.yaml  why.md  why.yaml
sites/cleaning/: README.md  book.md  book.yaml  index.md  meta.yaml
sites/cleaning/static/booking/: app.js  booking.css  config.js
sites/cleaning/static/booking/apps-script/: Code.gs
sites/games/: games.yaml  index.md  meta.yaml  school.md  school.yaml
sites/group/: index.md  meta.yaml
sites/software/: about.md  about.yaml  index.md  meta.yaml  school.yaml
sites/store/: index.md  meta.yaml
sites/technology/: index.md  meta.yaml
src/site_generator/: __init__.py  __main__.py  builder.py  cli.py  sites.py
templates/: about_michael.html  base.html  brand_base.html  charity_beliefs.html  charity_home.html  charity_living_faith.html  charity_why.html  cleaning_book.html  cleaning_home.html  games_home.html  games_school_vision.html  group_home.html  page.html  school_proposal.html  software_home.html  store_home.html  technology_home.html
templates/includes/: contact_block.html  depth_trail.html  family_cards.html  footer.html  nav.html
